# StarWars_SimplePygame

./: .gitignore  README.md  pyproject.toml
src/blank_pygame_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/game/: __init__.py  assets.py  entities.py  gameplay.py  main.py  settings.py  ui.py
tests/: test_smoke.py
