[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blank-pygame-game"
version = "0.1.0"
description = "Retro pixel-art Star Wars inspired arcade shooter built with pygame."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
game = "game.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
